--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -7,7 +7,7 @@
 .container {
   display: flex;
   flex-wrap: wrap;
-  max-width: 1200px;
+  max-width: 800px;
   margin: 0 auto;
   padding: 15px;
 }
@@ -15,16 +15,16 @@
 .card {
   position: relative;
   width: calc(25% - 20px);
-  height: 400px;
+  height: 200px;
   margin: 10px;
   font-family: 'Open Sans Condensed', sans-serif;
-  font-size: 50px;
+  font-size: 40px;
   perspective: 800px;
   &__open {
-    .card__front{
+    & .card__front{
       transform: rotateY(180deg);
     }
-    .card__back {
+    & .card__back {
       transform: rotateY(0deg);
     }
   }
@@ -63,19 +63,22 @@
     box-shadow: 2px 2px 10px 0px rgba(0,0,0,1);
     &-top {
       &-suit {
-        font-size: 30px;
         margin-left: 3px;
+        font-size: 18px;
+        line-height: 12px;
       }
     }
     &-mid {
-      font-size: 70px;
+      font-size: 40px;
+      line-height: 40px;
       text-align: center;
     }
     &-bottom {
       transform: rotateZ(180deg);
       &-suit {
-        font-size: 30px;
         margin-left: 3px;
+        font-size: 18px;
+        line-height: 12px;
       }
     }
   }
