--- a/main.scss
+++ b/main.scss
@@ -1,7 +1,8 @@
 @import url( 'https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300,700');
 
-* {
-  box-sizing: border-box;
+body {
+  background: #F4F4EF;
+  color: #525c65;
 }
 
 .container {
@@ -20,14 +21,18 @@
   font-family: 'Open Sans Condensed', sans-serif;
   font-size: 40px;
   perspective: 800px;
+
   &__open {
+
     & .card__front{
       transform: rotateY(180deg);
     }
+
     & .card__back {
       transform: rotateY(0deg);
     }
   }
+
   &__front {
     position: absolute;
     top: 0;
@@ -35,14 +40,15 @@
     width: 100%;
     height: 100%;
     padding: 15px;
-    background: rgb(0, 188, 245);
+    background: #02B7E9;
     transition: all 1s ease-in;
     transform-style: preserve-3d;
     z-index: 1;
-    border: 1px solid #000;
+    border: 0.125rem solid transparent;
+    border-radius: 0.375rem;
     backface-visibility: hidden;
-    box-shadow: 2px 2px 10px 0px rgba(0,0,0,1);
-
+    box-shadow: 5px 5px 25px 0px rgba(46,61,73,0.2);
+    box-sizing: border-box;
   }
   &__back {
     display: flex;
@@ -54,13 +60,16 @@
     width: 100%;
     height: 100%;
     padding: 15px;
-    background: rgb(192, 211, 254);
+    background: #FAFBFC;
     transition: all 1s ease-in;
     transform: rotateY(-180deg);
     transform-style: preserve-3d;
-    border: 1px solid #000;
+    border: 0.125rem solid transparent;
+    border-radius: 0.375rem;
     backface-visibility: hidden;
-    box-shadow: 2px 2px 10px 0px rgba(0,0,0,1);
+    box-shadow: 5px 5px 25px 0px rgba(46,61,73,0.2);
+    box-sizing: border-box;
+
     &-top {
       &-suit {
         margin-left: 3px;
@@ -68,11 +77,13 @@
         line-height: 12px;
       }
     }
+
     &-mid {
       font-size: 40px;
       line-height: 40px;
       text-align: center;
     }
+    
     &-bottom {
       transform: rotateZ(180deg);
       &-suit {
