change style cards

--- a/main.css
+++ b/main.css
@@ -1,75 +1,95 @@
-@import url("https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300,700");
 body {
-  background: #F4F4EF;
-  color: #525c65; }
+    background: #F4F4EF;
+    color: #525c65;
+}
 
 .container {
-  display: flex;
-  flex-wrap: wrap;
-  max-width: 800px;
-  margin: 0 auto;
-  padding: 15px; }
+    display: flex;
+    flex-wrap: wrap;
+    max-width: 600px;
+    margin: 0 auto;
+    padding: 15px; 
+}
 
 .card {
-  position: relative;
-  width: calc(25% - 20px);
-  height: 200px;
-  margin: 10px;
-  font-family: 'Open Sans Condensed', sans-serif;
-  font-size: 40px;
-  perspective: 800px; }
-  .card__open .card__front {
-    transform: rotateY(180deg); }
-  .card__open .card__back {
-    transform: rotateY(0deg); }
-  .card__front {
+    position: relative;
+    width: calc(25% - 20px);
+    height: 150px;
+    margin: 10px;
+    font-family: 'Open Sans Condensed', sans-serif;
+    font-size: 40px;
+    perspective: 800px; 
+}
+
+.card-open .card-back {
+    transform: rotateY(180deg); 
+}
+
+.card-open .card-front {
+    transform: rotateY(0deg); 
+}
+
+.card-back {
     position: absolute;
     top: 0;
     left: 0;
+    box-sizing: border-box; 
     width: 100%;
     height: 100%;
-    padding: 15px;
-    background: #02B7E9;
-    transition: all 1s ease-in;
-    transform-style: preserve-3d;
-    z-index: 1;
     border: 0.125rem solid transparent;
     border-radius: 0.375rem;
+    background: #02B7E9;
+    transition: all 0.8s ease-in;
+    transform-style: preserve-3d;
     backface-visibility: hidden;
-    box-shadow: 5px 5px 25px 0px rgba(46, 61, 73, 0.2);
-    box-sizing: border-box; }
-  .card__back {
+    box-shadow: 5px 5px 25px 0px rgba(46, 61, 73, 0.2); 
+}
+
+.card-front {
+    position: absolute;
+    top: 0;
+    left: 0;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    position: absolute;
-    top: 0;
-    left: 0;
+    box-sizing: border-box; 
     width: 100%;
     height: 100%;
-    padding: 15px;
-    background: #FAFBFC;
-    transition: all 1s ease-in;
-    transform: rotateY(-180deg);
-    transform-style: preserve-3d;
+    padding: 10px;
     border: 0.125rem solid transparent;
     border-radius: 0.375rem;
+    background: #FAFBFC;
+    transition: all 0.8s ease-in;
+    transform: rotateY(-180deg);
+    transform-style: preserve-3d;
     backface-visibility: hidden;
     box-shadow: 5px 5px 25px 0px rgba(46, 61, 73, 0.2);
-    box-sizing: border-box; }
-    .card__back-top-suit {
-      margin-left: 3px;
-      font-size: 18px;
-      line-height: 12px; }
-    .card__back-mid {
-      font-size: 40px;
-      line-height: 40px;
-      text-align: center; }
-    .card__back-bottom {
-      transform: rotateZ(180deg); }
-      .card__back-bottom-suit {
-        margin-left: 3px;
-        font-size: 18px;
-        line-height: 12px; }
+}
 
-/*# sourceMappingURL=main.css.map */
+.card-front-top-number{
+    line-height: 40px;
+}
+.card-front-top-suit {
+    margin-left: 3px;
+    font-size: 18px;
+    line-height: 10px;
+}
+
+.card-front-mid {
+    line-height: 30px;
+    text-align: center; 
+}
+
+.card-front-bottom {
+    transform: rotateZ(180deg); 
+}
+
+.card-front-bottom-number {
+    line-height: 40px;
+}
+
+.card-front-bottom-suit {
+    margin-left: 3px;
+    font-size: 18px;
+    line-height: 10px; 
+}
