--- a/main.css
+++ b/main.css
@@ -1,4 +1,5 @@
 body {
+    margin: 0;
     background: #F4F4EF;
     color: #525c65;
 }
@@ -19,6 +20,10 @@ body {
     font-family: 'Open Sans Condensed', sans-serif;
     font-size: 40px;
     perspective: 800px; 
+}
+
+.card:hover {
+    cursor: pointer;
 }
 
 .card-open .card-back {
@@ -79,6 +84,7 @@ body {
     line-height: 30px;
     text-align: center; 
 }
+
 
 .card-front-bottom {
     transform: rotateZ(180deg); 
