set z-index front card

--- a/main.css
+++ b/main.css
@@ -69,6 +69,7 @@ body {
     transform-style: preserve-3d;
     backface-visibility: hidden;
     box-shadow: 5px 5px 25px 0px rgba(46, 61, 73, 0.2);
+    z-index: -1;
 }
 
 .card-front-top-number{
