--- a/src/assets/sass/common.sass
+++ b/src/assets/sass/common.sass
@@ -1,4 +1,11 @@
+*
+    box-sizing: border-box
+
+html
+    height: 100%
+
 body
+    height: 100%
     margin: 0
     background: #f4f4ef
     color: #525c65
